Docker Persistant Volume Added for DB PROD

--- a/Docker/docker-compose-prod.yml
+++ b/Docker/docker-compose-prod.yml
@@ -16,6 +16,7 @@ services:
       - MYSQL_ALLOW_EMPTY_PASSWORD=1
     volumes:
       - ../sql:/docker-entrypoint-initdb.d
+      - db-data:/var/lib/mysql
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
@@ -23,3 +24,6 @@ services:
     environment:
       - PMA_HOST=db
       - PMA_PORT=3306
+    
+volumes:
+  db-data:
