--- a/Docker/docker-compose-prod.yml
+++ b/Docker/docker-compose-prod.yml
@@ -2,9 +2,9 @@
 version: '3'
 services:
   www:
-    build: ./apache
-    volumes:
-      - ../:/var/www/html
+    build:
+      context: ../
+      dockerfile: ./Docker/apache/Dockerfile
     ports:
       - 80:80
   db:
