--- a/Docker/docker-compose-preprod.yml
+++ b/Docker/docker-compose-preprod.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: ./Docker/apache/Dockerfile
     ports:
       - 81:80
+    volumes:
+      - ../:/var/www/html
   db:
     image: mysql:latest
     environment:
